<resources>
    <string name="app_name" translatable="false">eGarden</string>
    <string name="title_activity_dashboard">Dashboard</string>

    <string name="login">Login</string>
    <string name="username">username</string>
    <string name="connexion">connection</string>
    <string name="port">port</string>
    <string name="password">password</string>
    <string name="ipaddress">ipaddress</string>

    <string name="credentials_preference_file" translatable="false">fr.kriszt.theo.egarden.PREFERENCE_FILE_KEY</string>
    <string name="saved_port_key" translatable="false">saved_port_key</string>
    <string name="saved_ip_key" translatable="false">saved_ip_key</string>
    <string name="saved_password_key" translatable="false">saved_password_key</string>
    <string name="saved_username_key" translatable="false">saved_username_key</string>

    <string name="preferences">preferences</string>
    <string name="shooting">shootings</string>
    <string name="no_internet_connection">no internet connection</string>
    <string name="dashboard">dashboard</string>
    <string name="notifications">notifications</string>
    <string name="settings">settings</string>
    <string name="navigation">navigation</string>
    <string name="statistics">statistics</string>

    <string name="defaultNotificationChannel" translatable="false">egarden_notification_channel_DEFAULT</string>


    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Dashboard</item>
        <item>@string/plants_states</item>
        <item>@string/garden</item>
        <!--<item>Download all plants images</item>-->
        <item>Timelapses</item>
        <item>Notifications</item>
        <item>Settings</item>
    </string-array>
    <string name="openDrawer" translatable="false">open_drawer</string>
    <string name="closeDrawer" translatable="false">close_drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_main2" translatable="false">Main2Activity</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="action_settings">Settings</string>


    <string name="download_name" translatable="false">Android Download Demo</string>

    <string name="download_zip" translatable="false">Download Zip</string>
    <string name="downloadStarted" translatable="false">Download Started…</string>
    <string name="downloadCompleted" translatable="false">Download Completed…</string>
    <string name="downloadFailed" translatable="false">Download Failed…</string>
    <string name="downloadAgain" translatable="false">Download Again</string>
    <string name="unZipFolder" translatable="false">Unzip Folder</string>
    <string name="plants_states">Etat des plantes</string>
    <string name="garden">Jardin</string>
    <string name="dwn_imgs">Telecharger les images</string>
    <string name="hygrometry">hygrometry</string>
    <string name="to">à</string>
    <string name="loadDHT">Chargement des données environnementales</string>
    <string name="plantsNeedWater">Des plantes manquent d\'eau</string>
    <string name="sunlight">Ensoleillement</string>
    <string name="temperature">Temperature</string>
    <string name="humidity">humidity</string>
    <string name="errorGetDHT">Erreur lors de la récupération des données environnementales</string>
    <string name="plant_image">image de la plante</string>
    <string name="threshold">threshold :</string>
    <string name="save">save</string>
    <string name="state">Etat</string>
    <string name="plant_thirsty">en manque d\'eau</string>
    <string name="plant_hydrated">arrosée</string>
    <string name="plant_watering">arrosage en cours</string>
    <string name="plant_unknown">inconnu</string>
    <string name="delay_between_alerts">Intervalle entre les notifications</string>
    <string name="min_storage_threshold">espace restant avant alerte</string>
    <string name="meteo_condition">Evenement meteo</string>
    <string name="remaining_storage">Espace disque restant</string>
    <string name="reservoir_empty">Reservoir vide</string>
    <string name="general_notifications">Notifications générales</string>
    <string name="alert_thirsty">plante en manque d\'eau</string>
    <string name="general_enable_notifications">Recevoir des notifications</string>
    <string name="saved_confirmation">Préférences enregistrées</string>
    <string name="in_less_than">Dans moins de</string>
    <string name="minutes">minutes</string>
    <string name="heures">heures</string>
    <string name="arroser_pendant">Arroser pendant</string>
    <string name="enable_timelapse">Activer le timelapse</string>
    <string name="all_the">Toutes les</string>
    <string name="watering">Arrosage</string>
    <string name="timelapse">Timelapse</string>
    <string name="reporter_si_pluie_pr_vue">Reporter si pluie prévue</string>
    <string name="arroser_uniquement_le_soir">Arroser uniquement le soir</string>
    <string name="autowater">arrosage auto.</string>
    <string name="observe_garden">Observer le jardin</string>
    <string name="water_now">Arroser maintenant</string>
    <string name="load">Charger</string>
    <string name="prise_secteur">Prise secteur</string>
    <string name="view">Vue :</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="download">download</string>
    <string name="plant_name">Nom de la plante</string>

    <string-array name="notification_storage_sizes">
        <item>%</item>
        <item>MB</item>
        <item>GB</item>
    </string-array>

    <string-array name="timelapse_weekday_select">
        <item>Direct</item>
        <item>Jour</item>
        <item>Semaine</item>
    </string-array>

    <string-array name="notification_delay_types">
        <item>minutes</item>
        <item>hours</item>
        <item>days</item>
    </string-array>

</resources>
