<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fr.kriszt.theo.egarden.fragment.NotificationsFragment">

    <Switch
        android:id="@+id/general_enable_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/general_enable_notifications"
        app:layout_constraintBottom_toTopOf="@+id/thirsty_switch"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/general_notifs_textView" />

    <Switch
        android:id="@+id/thirsty_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginStart="32dp"
        android:text="@string/alert_thirsty"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/reservoir_switch"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/general_enable_switch" />

    <TextView
        android:id="@+id/general_notifs_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/general_notifications"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toTopOf="@+id/general_enable_switch"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/storagetextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/remaining_storage"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/notification_storage_edit_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notification_delay_edit_layout" />

    <Switch
        android:id="@+id/reservoir_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginStart="32dp"
        android:text="@string/reservoir_empty"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/meteo_condition_switch"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/thirsty_switch" />

    <Switch
        android:id="@+id/meteo_condition_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginStart="32dp"
        android:text="@string/meteo_condition"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/notification_delay_edit_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reservoir_switch" />


    <android.support.design.widget.TextInputLayout
        android:id="@+id/notification_delay_edit_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editUsernameLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="32dp"
        android:layout_marginStart="32dp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/storagetextView"
        app:layout_constraintEnd_toStartOf="@+id/time_delay_spinner"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/meteo_condition_switch">

        <EditText
            android:id="@+id/notification_delay_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/delay_between_alerts"
            android:inputType="number"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    </android.support.design.widget.TextInputLayout>

    <Spinner
        android:id="@+id/time_delay_spinner"
        android:layout_width="wrap_content"
        android:layout_height="21dp"
        android:layout_marginBottom="8dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/notification_delay_edit_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/notification_delay_edit_layout" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/notification_storage_edit_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editUsernameLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="32dp"
        android:layout_marginStart="32dp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/saveNotifsbutton"
        app:layout_constraintEnd_toStartOf="@+id/storage_size_spinner"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/storagetextView">

        <EditText
            android:id="@+id/notification_storage_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/min_storage_threshold"
            android:inputType="number"
            android:textAppearance="@style/TextAppearance.AppCompat" />

    </android.support.design.widget.TextInputLayout>


    <Spinner
        android:id="@+id/storage_size_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/notification_storage_edit_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/notification_storage_edit_layout" />

    <Button
        android:id="@+id/saveNotifsbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notification_storage_edit_layout" />

    <ProgressBar
        android:id="@+id/notification_progressBar"
        style="@style/Widget.AppCompat.ProgressBar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:indeterminate="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="visible"/>


</android.support.constraint.ConstraintLayout>
