<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fr.kriszt.theo.egarden.LoginActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/connectButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/connexion"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editPassword" />

        <EditText
            android:id="@+id/editPort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:ems="10"
            android:hint="@string/port"
            android:inputType="number"
            app:layout_constraintBottom_toTopOf="@+id/editUsername"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editIPAddress" />

        <EditText
            android:id="@+id/editPassword"
            android:layout_width="wrap_content"
            android:layout_height="41dp"

            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            app:layout_constraintBottom_toTopOf="@+id/connectButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editUsername" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="131dp"
            app:layout_constraintBottom_toTopOf="@+id/editIPAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/raspileaf_logo" />

        <EditText
            android:id="@+id/editUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="username"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toTopOf="@+id/editPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editPort" />

        <EditText
            android:id="@+id/editIPAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:ems="10"
            android:hint="@string/ipaddress"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toTopOf="@+id/editPort"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <ProgressBar
            android:id="@+id/connexionProgressBar"
            style="@style/Widget.AppCompat.ProgressBar"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"

            android:indeterminate="true"
            android:visibility="invisible"
            android:max="100"
            android:padding="20dp"
            android:progress="50"
            app:layout_constraintBottom_toTopOf="@+id/editPort"
            app:layout_constraintTop_toBottomOf="@+id/editIPAddress"
            app:layout_constraintVertical_bias="0.647"
            tools:layout_editor_absoluteX="0dp" />
    </android.support.constraint.ConstraintLayout>


</RelativeLayout>
